# My-AI-News-Aggregator

./: .gitignore  README.md  example.env  main.py  pyproject.toml  render.yaml
.github/workflows/: send_digest.yml
app/: daily_runner.py  runner.py
app/agent/: curator_agent.py  digest_agent.py  email_agent.py
app/database/: clear_data.py  connection.py  drop_tables.py  models.py  repository.py  test_connection.py
app/profiles/: user_profile.py
app/scrapers/: anotheryoutube.py  openai.py  wired.py  youtube.py
app/services/: process_email.py  send_email.py
docker/: docker-compose.yml  example.env
